style: fixed jumping intro button bug - size adjustment

--- a/style/style.scss
+++ b/style/style.scss
@@ -170,7 +170,7 @@ header{
 #intro-button{
     border-radius: 50%;
     color: #eae9e0;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     opacity: 0;
     transition: opacity 2s;
     cursor: default;
@@ -179,6 +179,7 @@ header{
 
 .fa-play-circle{
     color: #9AE5E6;
+    line-height: 1.3rem;
 }
 
 @media (max-width: 992px){
